--- a/user/config/themes/local.yaml
+++ b/user/config/themes/local.yaml
@@ -32,3 +32,17 @@ menu:
 dropdown:
   enabled: false
 blog_page_hero_classes: 'text-light title-h1h2 overlay-dark-gradient hero-large parallax'
+custom_logo:
+  user/themes/local/images/logo/logo.png:
+    name: logo.png
+    full_path: logo.png
+    type: image/png
+    size: 77545
+    path: user/themes/local/images/logo/logo.png
+custom_logo_mobile:
+  user/themes/local/images/logo/logo.png:
+    name: logo.png
+    full_path: logo.png
+    type: image/png
+    size: 77545
+    path: user/themes/local/images/logo/logo.png
