update local theme

--- a/user/config/site.yaml
+++ b/user/config/site.yaml
@@ -1,4 +1,5 @@
 title: "Musikgesellschaft Rumisberg"
+slug: "— Begeisterung für die Musik seit 1946"
 default_lang: de
 author:
   name: Nicholas Krebs
