fix: quick-tray mailto link
fixed with getgrav/grav@ee8d783

--- a/user/config/plugins/quick-tray-links.yaml
+++ b/user/config/plugins/quick-tray-links.yaml
@@ -12,6 +12,6 @@ links:
     external: true
   -
     icon: 'fa fa-envelope'
-    link: 'mailto://support@crabston.dev'
+    link: 'mailto:support@crabston.dev'
     tooltip: 'Email Crabston Helpdesk'
     external: true
