--- a/user/accounts/client.yaml
+++ b/user/accounts/client.yaml
@@ -1,12 +1,10 @@
 state: enabled
 email: clients@crabston.dev
-fullname: Crabston Clients
+fullname: 'Crabston Clients'
 language: de
 content_editor: default
 hashed_password: $2y$10$pWvNDS.n6CAM.YSakaUCvepgCGQlcCdFDef6M2lvQM0vwalvnERzy
 groups:
-  - +default
+  - admin
   - statistics
-  - editor
   - pages
-  - maintainer
