--- a/user/accounts/demo.yaml
+++ b/user/accounts/demo.yaml
@@ -4,4 +4,4 @@ fullname: 'Demo User'
 language: de
 hashed_password: $2y$10$HP4UKG7cAnbTYmYi6fklDOq8jdPiYQ26Er/igyCajvPwZLAdqt/aK # password: Demo1234
 groups:
-  - +private
+  - website
