--- a/user/config/plugins/youtube.yaml
+++ b/user/config/plugins/youtube.yaml
@@ -1,6 +1,6 @@
 enabled: true
 built_in_css: true
-built_in_js: false
+built_in_js: true
 add_editor_button: true
 player_parameters:
   autoplay: 0
@@ -16,8 +16,8 @@ player_parameters:
   modestbranding: 0
   origin: null
   playsinline: 0
-  rel: 1
-  showinfo: 1
+  rel: 0
   vq: default
-privacy_enhanced_mode: false
-lazy_load: false
+  showinfo: 1
+privacy_enhanced_mode: true
+lazy_load: true
